--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,38 @@
         "nova"
     ],
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Yaroslav Georgitsa",
+            "email": "yaroslav.georgitsa@gmail.com",
+            "homepage": "https://github.com/yaroslawww",
+            "role": "Developer"
+        }
+    ],
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    ],
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "laravel/nova": "^3.3"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.1"
+        "friendsofphp/php-cs-fixer": "^3.3",
+        "orchestra/testbench": "^6.23",
+        "psalm/plugin-laravel": "^1.5",
+        "vimeo/psalm": "^4.13"
     },
     "autoload": {
         "psr-4": {
             "NovaResponsiveTheme\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "NovaResponsiveTheme\\Tests\\": "tests"
         }
     },
     "extra": {
@@ -25,6 +48,9 @@
         }
     },
     "scripts": {
+        "test": "vendor/bin/phpunit --stop-on-failure",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "psalm": "vendor/bin/psalm",
         "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
     },
     "config": {
